# thesis_analysis

./: .gitignore  .justfile  Dockerfile  README.md  docker-entrypoint.sh  luigi.cfg  pyproject.toml  ruff.toml  slurm_job.sh
src/thesis_analysis/: __init__.py  colors.py  constants.py  logger.py  paths.py  pwa.py  pwa_old.py  root_io.py  splot.py  thesis.mplstyle  utils.py  wave.py
src/thesis_analysis/tasks/: accid_and_pol.py  accidentals.py  aux_plots.py  baryon_cut.py  baryon_plots.py  bggen.py  binned_and_unbinned_plot.py  binned_fit.py  binned_fit_report.py  binned_fit_uncertainty.py  binned_plot.py  binned_regularized_fit.py  binned_regularized_plot.py  bootstrap_uncertainty_comparison_plot.py  ccdb.py  chisqdof.py  chisqdof_plot.py  chisqndf.py  costheta_plot.py  cut_plots.py  cut_plots_combined.py  data.py  databases.py  factorization_fit.py  factorization_plot.py  factorization_report.py  fit_unbinned.py  guided_fit.py  guided_plot.py  mass_plot.py  pdg_plot.py  phi_plot.py  plot_mass.py  plot_splot.py  plot_unbinned.py  plot_unbinned_guided.py  plot_unbinned_initialized.py  pol_gen.py  rcdb.py  rf_plot.py  (+15 more)
