[project]
name = "thesis_analysis"
version = "0.1.0"
description = "Thesis Analysis Code for N. Dene Hoffman"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "corner>=2.2.3",
    "iminuit>=2.30.1",
    "laddu>=0.1.16",
    "luigi>=3.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "scp>=0.15.0",
    "setuptools>=75.8.0",
    "uproot>=5.5.1",
]

[project.scripts]
ksks-analysis = "thesis_analysis:main"

[tool.setuptools.packages.find]
where = ["src"]
