[project]
name = "thesis_analysis"
version = "0.1.0"
description = "Thesis Analysis Code for N. Dene Hoffman"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "corner>=2.2.3",
  "iminuit>=2.30.1",
  "laddu>=0.5.2",
  "luigi>=3.6.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.1",
  "scipy>=1.15.1",
  "scp>=0.15.0",
  "setuptools>=75.8.0",
  "uproot>=5.5.1",
  "loguru>=0.7.3",
]

[project.scripts]
ksks-analysis = "thesis_analysis:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
thesis_analysis = ["*.mplstyle"]

[tool.pyright]
reportAny = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportMissingTypeStubs = false
reportUnusedCallResult = false
